2012-04-20  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/mkdir.c: Remove file.
	* sysdeps/unix/rmdir.c: Likewise.

2012-04-19  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/gnu/errlist-compat.awk (END): Correct computation of
	ERR_MAX value.
	* sysdeps/unix/sysv/linux/Versions (GLIBC_2.12): Adjust
	errlist-compat value.

2012-04-18  David S. Miller  <davem@davemloft.net>

	* sysdeps/generic/memcopy.h (reg_char): Delete.
	* debug/strcat_chk.c: Use char, not reg_char.
	* debug/strcpy_chk.c: Likewise.
	* debug/strncat_chk.c: Likewise.
	* debug/strncpy_chk.c: Likewise.
	* string/memchr.c: Likewise.
	* string/memrchr.c: Likewise.
	* string/rawmemchr.c: Likewise.
	* string/strcat.c: Likewise.
	* string/strchr.c: Likewise.
	* string/strchrnul.c: Likewise.
	* string/strcmp.c: Likewise.
	* string/strcpy.c: Likewise.
	* string/strncat.c: Likewise.
	* string/strncmp.c: Likewise.
	* string/strncpy.c: Likewise.

2012-04-18  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/powerpc/memmove.c: New file based on string/memmove.c where
	__builtin_memcopy is called when src and dest ranges are known to not
	overlap.

2012-04-18  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power6/wordcopy.c
	(_wordcopy_fwd_dest_aligned): Replace switch with a parameterized
	fwd_align_merge macro call.
	(_wordcopy_bwd_dest_aligned): Replace switch with a parameterized
	bwd_align_merge macro call.
	* sysdeps/powerpc/powerpc32/power6/wordcopy.c: Likewise.

2012-04-18  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power6/wordcopy.c: Add fwd_align_merge and
	bwd_align_merge macros.
	(_wordcopy_fwd_dest_aligned): Use fwd_align_merge macro calls.
	(_wordcopy_bwd_dest_aligned): Use bwd_align_merge macro calls.
	* sysdeps/powerpc/powerpc32/power6/wordcopy.c: Likewise.

2012-04-18  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc64/memcopy.h: Delete.

2012-04-18  Andreas Jaeger  <aj@suse.de>

	[BZ# 6794]